# vvz-theorydocs

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.cursor/: standards.mdc
.github/workflows/: ci.yml  publish-pypi.yml
docs/: PUBLISHING.md
docs/tech_spec/: README.md  TECH_SPEC.md
docs/tech_spec/steps/: PARALLEL_EXECUTION.md  STEPS_INDEX.md  STEP_FILE_TEMPLATE.md  step_01_config.md  step_02_faiss_manager.md  step_03a_redis_lua_scripts.md  step_03b_redis_batch.md  step_04_chunker_client.md  step_05_summary_llm.md  step_06_populate.md  step_07_add_command.md  step_08_cli_entrypoint.md  step_09_docker_build.md  step_10_docker_run.md
tests/: __init__.py  test_package.py
theorydocs/: __init__.py
