# Theorydocs — theory search package (FAISS, MCP vectorization).
# Author: Vasiliy Zdanovskiy
# email: vasilyvz@gmail.com

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vvz-theorydocs"
version = "0.1.0"
description = "Theory search package: SQLite/FTS5 base, FAISS vector index, MCP chunking and vectorization."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Vasiliy Zdanovskiy", email = "vasilyvz@gmail.com" }
]
maintainers = [
    { name = "Vasiliy Zdanovskiy", email = "vasilyvz@gmail.com" }
]
keywords = [
    "search",
    "theory",
    "faiss",
    "vector",
    "mcp",
    "chunking",
    "fts5",
    "sqlite",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=23",
    "flake8>=6",
    "mypy>=1.0",
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/vasilyvz/vvz-theorydocs"
Documentation = "https://github.com/vasilyvz/vvz-theorydocs/blob/main/docs/tech_spec/search/README.md"
Repository = "https://github.com/vasilyvz/vvz-theorydocs"

[project.scripts]
# Entry point when CLI is implemented, e.g.:
# search-theory = theorydocs.cli:main

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
